# proxy

./: .gitignore  Cargo.toml  filter_config.json
client/: adguard.html  index.html
src/: lib.rs  main.rs
src/client_id/: db.rs  mod.rs  models.rs  redis_cache.rs
src/db/: mod.rs  operations.rs
src/dns/: cache.rs  mod.rs  proxy.rs
src/filter/: categories.rs  engine.rs  mod.rs  rules.rs
src/migrations/: 20250414_initial_schema.sql
src/models/: client.rs
src/utils/: logging.rs  metrics.rs  metrics_channel.rs  mod.rs
