[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
authors = ["Samwuel Simiyu", "<samwuels254@gmail.com>"]
description = "A Rust based filtering service"
license = "MIT"

[dependencies]
env_logger = "0.11.7"
hickory-proto = "0.25.1"
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
trust-dns-proto = "0.23.2"
warp = "0.3.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
chrono = { version = "0.4.40", features = ["serde"] }
colored = "2.0"
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
native-tls = "0.2"
async-trait = "0.1.88"
regex = "1.10.2"
once_cell = "1.21.3"
redis = { version = "0.29.5", features = ["aio", "tokio-comp"] }
lru = "0.14.0"
uuid = { version = "1.16.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono"] }
dotenv = "0.15.0"
